fix overflow hidden issue on vertical megamenu

--- a/packages/daisyui/src/components/megamenu.css
+++ b/packages/daisyui/src/components/megamenu.css
@@ -26,7 +26,9 @@
         pointer-events: none;
         inset-inline-end: 1.4rem;
         box-shadow: inset 2px 2px;
-        transition: opacity 200ms ease-out, rotate 200ms ease-out;
+        transition:
+          opacity 200ms ease-out,
+          rotate 200ms ease-out;
         width: 0.375rem;
         height: 0.375rem;
         display: block;
@@ -120,7 +122,7 @@
     }
 
     [popover] {
-      @apply mt-1 max-h-dvh border border-base-300 opacity-0;
+      @apply border-base-300 mt-1 max-h-dvh border opacity-0;
       border-radius: var(--radius-box);
       background-color: var(--color-base-100);
       position-area: block-end span-inline-end;
@@ -151,7 +153,7 @@
 }
 .megamenu-active {
   @layer daisyui.l1.l2.l3 {
-    @apply pointer-events-none absolute bg-base-content/10;
+    @apply bg-base-content/10 pointer-events-none absolute;
     border-radius: var(--radius-field);
     transition:
       inset 300ms linear(0, 0.5 10%, 0.9 30%, 1.05 50%, 1.1 75%, 1),
@@ -185,7 +187,7 @@
 
 .megamenu-vertical {
   @layer daisyui.l1.l2 {
-    @apply relative w-full flex-col items-start rounded-none opacity-0;
+    @apply relative w-full flex-col items-start overflow-auto rounded-none opacity-0;
     background-color: var(--color-base-100);
     border-inline-width: 0;
     position-area: block-end;
@@ -199,7 +201,7 @@
       display 200ms ease-out allow-discrete,
       overlay 200ms ease-out allow-discrete;
     &:popover-open {
-      @apply pt-4 opacity-100;
+      @apply fixed pt-4 opacity-100;
       @starting-style {
         @apply opacity-0;
       }
